--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -1,9 +1,10 @@
             // CSS HEADER FORM
             .header__form {
                 display: flex;
-                justify-content: center;
+                justify-content: left;
                 align-items: center;
                 background-color: $color--white;
+        
             }
 
             .title__form {
@@ -14,6 +15,7 @@
                 background-image: url('../../images/tarjetas-molonas.png');
                 background-size: cover;
                 margin: 30px auto 30px 40px;
+                
             }
 
             // CSS FORM MAIN
