add height to root div and fix style

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,3 +16,9 @@
 @import 'layout/opt-share';
 // Pages
 @import 'layout/form';
+
+#root{
+    height: 100vh;
+    display:flex;
+    flex-direction:column;
+}
