--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -18,6 +18,7 @@
 
             // CSS FORM MAIN
             .main__box {
+                flex-grow:2;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
